--- a/afbeeldingen.html
+++ b/afbeeldingen.html
@@ -4,175 +4,18 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Informatieschermen Belgisch treinstation</title>
-
-<style>
-:root{
-  --bg:#163a36;
-  --panel:#0d4f4e;
-  --panel-dark:#0b4241;
-  --white:#ffffff;
-}
-
-/* RESET */
-*{
-  box-sizing:border-box;
-  margin:0;
-  padding:0;
-}
-
-body{
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: var(--bg);
-  color: var(--white);
-}
-
-/* ========== HEADER ========== */
-header{
-  display:flex;
-  align-items:center;
-  justify-content:space-between; 
-  flex-wrap:wrap;
-  padding:20px;
-  gap:16px;
-}
-
-
-.header-left{
-  display:flex;
-  align-items:center;
-  gap:20px;
-}
-
-.terug-button {
-  display: inline-block;
-  background-color: var(--panel);
-  color: var(--white);
-    padding: 14px 36px;
-    border-radius: 28px;
-    font-weight: 800;
-    font-size: 20px;
-    letter-spacing: 1px;
-  text-decoration: none;
-  box-shadow: 0 6px 0 rgba(0,0,0,0.12);
-  transition: transform .12s ease, background-color .12s ease;
-}  
-
-.terug-button:hover {
-  background-color: var(--panel-dark);
-  transform: translateY(-2px);
-}
-
-.week-nav{
-  display:flex;
-  flex-wrap:wrap;
-  gap:12px;
-}
-
-.week-nav a{
-  color:#fff;
-  text-decoration:underline;
-  font-weight:600;
-  font-size:14px;
-}
-
-.naam{
-  font-weight:700;
-  font-size:16px;
-}
-
-/* ========== MAIN CONTENT ========== */
-main{
-  max-width:1800px;
-  margin:0 auto;
-  padding:60px 40px 80px;
-}
-
-h1{
-  font-size:20px;
-  margin-bottom:50px;
-}
-
-/* ========== SCHERMEN LAYOUT ========== */
-.wrapper {
-  display: grid;
-  grid-template-columns: 1.1fr 2fr;
-  gap: 80px;
-  align-items: start;
-}
-
-/* Links */
-.left {
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
-}
-
-/* Rechts */
-.right {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 40px;
-}
-
-.block {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-}
-
-.label {
-  font-size: 18px;
-  opacity: 0.85;
-}
-
-img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
-
-/* ========== FOOTER ========== */
-footer{
-  background-color: var(--panel);
-  padding:20px;
-  text-align:center;
-  font-size:14px;
-}
-
-footer a{
-  color:#fff;
-}
-
-/* ========== RESPONSIVE ========== */
-@media (max-width:1200px){
-  .wrapper{
-    grid-template-columns:1fr;
-    gap:60px;
-  }
-  .right{
-    grid-template-columns:repeat(2, 1fr);
-  }
-}
-
-@media (max-width:600px){
-  h1{font-size:32px;}
-  header{
-    flex-direction:column;
-    text-align:center;
-  }
-  .header-left{
-    justify-content:center;
-  }
-}
-</style>
+<!-- Tailwind CDN -->
+<script src="https://cdn.tailwindcss.com"></script>
+<!-- Eigen CSS -->
+<link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="bg-[var(--bg)] text-[var(--white)] font-sans">
 
-<header>
-  <div class="header-left">
+<header class="flex flex-wrap justify-between items-center p-5 gap-4">
+  <div class="header-left flex items-center gap-5">
     <a class="terug-button" href="index.html">HOME</a>
-    <nav class="week-nav">
+    <nav class="week-nav flex flex-wrap gap-3">
       <a href="week1.html">Week 1</a>
       <a href="week2.html">Week 2</a>
       <a href="week3.html">Week 3</a>
@@ -188,48 +31,48 @@ footer a{
       <a href="resultaat.html">Resultaat</a>
     </nav>
   </div>
-  <div class="naam">Lotte Charle – 1GDM1</div>
+  <div class="naam font-bold text-base">Lotte Charle – 1GDM1</div>
 </header>
 
-<main>
+<main class="max-w-[1800px] mx-auto p-[60px_40px_80px]">
 
-<h1>Drie types informatieschermen voor een Belgisch treinstation</h1>
+<h1 class="text-lg mb-12">Informatieschermen voor een Belgisch treinstation</h1>
 
-<div class="wrapper">
+<div class="wrapper grid [grid-template-columns:1.1fr_2fr] gap-[80px] items-start">
 
   <!-- Links -->
-  <div class="left">
-    <div class="block">
-      <img src="project/vertrekbord.jpg" alt="Centraal vertrekbord">
-      <div class="label">Centraal vertrekbord</div>
+  <div class="left flex flex-col gap-[50px]">
+    <div class="block flex flex-col gap-4">
+      <img src="project/vertrekbord.jpg" alt="Centraal vertrekbord" class="w-full h-auto block cursor-pointer">
+      <div class="label text-lg opacity-85">Centraal vertrekbord</div>
     </div>
 
-    <div class="block">
-      <img src="project/wagonscherm.jpg" alt="Wagonscherm">
-      <div class="label">Wagonscherm</div>
+    <div class="block flex flex-col gap-4">
+      <img src="project/wagonscherm.jpg" alt="Wagonscherm" class="w-full h-auto block cursor-pointer">
+      <div class="label text-lg opacity-85">Wagonscherm</div>
     </div>
   </div>
 
   <!-- Rechts -->
-  <div class="right">
-    <div class="block">
-      <img src="project/perronscherm.jpg">
-      <div class="label">Perronscherm</div>
+  <div class="right grid [grid-template-columns:repeat(4,1fr)] gap-[40px]">
+    <div class="block flex flex-col gap-4">
+      <img src="project/perronscherm.jpg" class="w-full h-auto block cursor-pointer">
+      <div class="label text-lg opacity-85">Perronscherm</div>
     </div>
 
-    <div class="block">
-      <img src="project/vertrekm.jpg">
-      <div class="label">Centraal vertrekbord mobiel</div>
+    <div class="block flex flex-col gap-4">
+      <img src="project/vertrekm.jpg" class="w-full h-auto block cursor-pointer">
+      <div class="label text-lg opacity-85">Centraal vertrekbord mobiel</div>
     </div>
 
-    <div class="block">
-      <img src="project/perronm.jpg">
-      <div class="label">Perronscherm + wagonscherm mobiel</div>
+    <div class="block flex flex-col gap-4">
+      <img src="project/perronm.jpg" class="w-full h-auto block cursor-pointer">
+      <div class="label text-lg opacity-85">Perronscherm + wagonscherm mobiel</div>
     </div>
 
-    <div class="block">
-      <img src="project/wagonm.jpg">
-      <div class="label">Extra mobiel scherm</div>
+    <div class="block flex flex-col gap-4">
+      <img src="project/wagonm.jpg" class="w-full h-auto block cursor-pointer">
+      <div class="label text-lg opacity-85">Extra mobiel scherm</div>
     </div>
   </div>
 
@@ -237,12 +80,35 @@ footer a{
 
 </main>
 
-<footer>
+<!-- LIGHTBOX -->
+<div id="lightbox" class="hidden fixed top-0 left-0 w-full h-full bg-black/80 flex justify-center items-center z-50">
+  <img id="lightbox-img" class="max-w-[90%] max-h-[90%] rounded-xl shadow-lg" src="">
+</div>
+
+<footer class="bg-[var(--panel)] p-5 text-center text-sm">
   <p>
     Laatst gepubliceerde versie op Github:
     <a href="https://github.com/jouw-gebruikersnaam/repo" target="_blank">Github-link</a>
   </p>
 </footer>
+
+<!-- LIGHTBOX SCRIPT -->
+<script>
+  const images = document.querySelectorAll('.wrapper img');
+  const lightbox = document.getElementById('lightbox');
+  const lightboxImg = document.getElementById('lightbox-img');
+
+  images.forEach(img => {
+    img.addEventListener('click', () => {
+      lightbox.classList.remove('hidden');
+      lightboxImg.src = img.src;
+    });
+  });
+
+  lightbox.addEventListener('click', () => {
+    lightbox.classList.add('hidden');
+  });
+</script>
 
 </body>
 </html>
