--- a/week11.html
+++ b/week11.html
@@ -1,177 +1,20 @@
 <!DOCTYPE html>
 <html lang="nl">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Week 11 – Eerste interacties</title>
-<style>
-:root {
-  --bg: #1f7a78;
-  --panel: #0d4f4e;
-  --panel-dark: #0b4241;
-  --text: #ffffff;
-}
-
-/* BASIS STYLING */
-* { box-sizing: border-box; margin: 0; padding: 0; }
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  background: var(--bg);
-  color: var(--text);
-  min-height: 100vh;
-}
-
-/* HEADER */
-header {
-  display:flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding: 20px;
-  gap: 16px;
-}
-
-.header-left {
-  display:flex;
-  align-items: center;
-  gap: 20px;
-}
-
-.terug-button {
-  display:inline-block;
-  background-color: var(--panel);
-  color: var(--text);
-  padding: 14px 36px;
-  border-radius: 28px;
-  font-weight: 800;
-  font-size: 20px;
-  letter-spacing: 1px;
-  text-decoration: none;
-  box-shadow: 0 6px 0 rgba(0,0,0,0.12);
-}
-
-.terug-button:hover {
-  background-color: var(--panel-dark);
-  transform: translateY(-2px);
-}
-
-.week-nav {
-  display:flex;
-  flex-wrap:wrap;
-  gap:12px;
-}
-
-.week-nav a {
-  color:#fff;
-  text-decoration: underline;
-  font-weight: 600;
-  font-size: 14px;
-}
-
-.naam{
-  font-weight:700;
-  font-size:16px;
-  color: #fff !important;
-}
-
-/* MAIN GRID */
-main {
-  display: flex;
-  justify-content: center;
-  padding: 40px 20px;
-}
-
-.page {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 40px;
-  max-width: 1400px;
-  width: 100%;
-  align-items: start;
-}
-
-/* TEKSTBLOK */
-.intro {
-  background: var(--panel);
-  padding: 40px;
-  border-radius: 16px;
-}
-
-.intro h1 { font-size: 56px; margin-bottom: 16px; }
-.intro hr { border: none; height: 2px; background: #fff; width: 300px; margin: 20px 0 30px; opacity: 0.9; }
-.intro h2 { font-size: 32px; margin-bottom: 20px; }
-.intro h3 { font-size: 22px; margin-top: 24px; margin-bottom: 8px; }
-.intro p { font-size: 16px; line-height: 1.6; margin-bottom: 16px; max-width: 900px; }
-
-/* AFBEELDINGEN PANEL */
-.screens {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
-}
-
-.screen-image {
-  width: 100%;
-  border-radius: 16px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.25);
-  object-fit: cover;
-  cursor: pointer;
-}
-
-/* FOOTER */
-footer {
-  width: 100%;
-  padding: 20px;
-  background-color: var(--panel);
-  text-align: center;
-  font-size: 16px;
-}
-
-footer a { color: var(--text); text-decoration: underline; }
-footer a:hover { color: #cceeed; }
-
-/* RESPONSIVE */
-@media (max-width: 1000px) {
-  .page { grid-template-columns: 1fr; gap: 30px; }
-  .screens { grid-template-columns: 1fr 1fr; }
-}
-
-@media (max-width: 600px) {
-  .intro h1 { font-size: 40px; }
-  .intro h2 { font-size: 24px; }
-  .intro h3 { font-size: 18px; }
-  .intro p { font-size: 14px; }
-  .screens { grid-template-columns: 1fr; }
-  header { flex-direction: column; text-align: center; gap: 10px; }
-  .header-left { justify-content: center; }
-}
-
-/* LIGHTBOX */
-#lightbox {
-  display: none;
-  position: fixed;
-  top:0; left:0;
-  width:100%; height:100%;
-  background: rgba(0,0,0,0.8);
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-}
-
-#lightbox img {
-  max-width: 90%;
-  max-height: 90%;
-  border-radius: 16px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.5);
-}
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Week 11 – Eerste interacties</title>
+  <!-- Tailwind CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Eigen CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="bg-[var(--bg)] text-[var(--white)] min-h-screen font-sans">
 
-<header>
-  <div class="header-left">
+<header class="flex flex-wrap justify-between items-center p-5 gap-4">
+  <div class="header-left flex items-center gap-5">
     <a class="terug-button" href="index.html">HOME</a>
-
-    <nav class="week-nav">
+    <nav class="week-nav flex flex-wrap gap-3">
       <a href="week1.html">Week 1</a>
       <a href="week2.html">Week 2</a>
       <a href="week3.html">Week 3</a>
@@ -187,33 +30,49 @@ footer a:hover { color: #cceeed; }
       <a href="resultaat.html">Resultaat</a>
     </nav>
   </div>
-
-  <div class="naam">Lotte Charle – 1GDM1</div>
+  <div class="naam font-bold text-base">Lotte Charle – 1GDM1</div>
 </header>
 
-<main>
-  <div class="page">
+<main class="flex justify-center p-10">
+  <div class="page grid lg:grid-cols-2 gap-10 max-w-[1400px] w-full items-start">
     <!-- TEKSTBLOK LINKS -->
-    <section class="intro">
-<h1>Week 11</h1> <hr> <h2>Eerste interacties</h2> <h3>Feedback</h3> <p>Uit de ontvangen feedback van de docenten bleek dat de huidige versie van mijn mobiele schermontwerpen nog te veel informatie tegelijk toont, wat de gebruiksvriendelijkheid vermindert. Als tip werd er meegegeven om tweaks toe te voegen en typografische aanpassingen door te voeren om de duidelijkheid en leesbaarheid te verbeteren. Op basis van deze feedback heb ik gekozen om bepaalde zaken anders te ordenen. Bijvoorbeeld niet de tussenstops mee te vermelden rechtstreeks onder de bestemming maar om met een dropdown menu te werken. Ook heb ik verder nagedacht over het complete plaatje omdat medestudenten aangaven dat het geheel wat eenvoudig lijkt en het een idee is om andere kleuropties te proberen voor een ander effect.</p> <h3>Opdracht</h3> <p>De opdracht van deze week bestond uit het toevoegen van de eerste interacties aan onze mobiele schermontwerpen.</p> <h3>Werkwijze</h3> <p>Deze week ben ik te werk gegaan door deskresearch te doen en andere apps te analyseren om te begrijpen hoe gelijkaardige functies en interacties worden uitgewerkt. Daarnaast heb ik extra informatie opgezocht buiten het lesmateriaal, onder andere via YouTube, om mijn kennis verder te verdiepen. De feedback van medestudenten heb ik bewust meegenomen in het proces, vooral omdat ik zelf ook nog niet volledig tevreden was over het kleurgebruik. Door te experimenteren en te spelen met verschillende kleurencombinaties heb ik het effect op de uitstraling en gebruiksvriendelijkheid onderzocht. Deze aanpak hielp om het ontwerp stap voor stap te verbeteren.</p> <h3>Geleerde inzichten</h3> <p>Dankzij deze opdracht heb ik ingezien hoe waardevol deskresearch is. Door andere apps te analyseren en extra informatie op te zoeken buiten het lesmateriaal, kreeg ik beter inzicht in gangbare patronen en best practices binnen interface- en interaction design. Ook de feedback van medestudenten bleek een belangrijk leermoment. Het bevestigde dat kleurgebruik en visuele hiërarchie een grote invloed hebben op de uitstraling en leesbaarheid van een ontwerp. Door te experimenteren met verschillende kleurencombinaties heb ik geleerd hoe kleine aanpassingen een groot effect kunnen hebben op het totaalgevoel van de applicatie.</p> <h3>Vooruitblik naar volgende week</h3> <p>Volgende week zal ik verder werken aan het bestaande ontwerp en analyseren waar extra interacties kunnen worden toegevoegd om de gebruiksvriendelijkheid van de app verder te optimaliseren. De focus ligt op het verfijnen van bestaande schermen en het verbeteren van de gebruikersflow, zodat de app consistenter aanvoelt. Ook ga ik mijn eerste versie van de applicatie laten testen door anderen zodat ik volgende week kan werken aan eventuele verbeteringen voor usability flow.</p>
+    <section class="intro bg-[var(--panel)] p-10 rounded-xl">
+      <h1 class="text-5xl mb-4">Week 11</h1>
+      <hr class="border-t-2 border-white/50 w-3/5 my-5">
+      <h2 class="text-3xl mb-5">Eerste interacties</h2>
+
+      <h3 class="text-xl mt-6 mb-2">Feedback</h3>
+      <p>Uit de ontvangen feedback van de docenten bleek dat de huidige versie van mijn mobiele schermontwerpen nog te veel informatie tegelijk toont, wat de gebruiksvriendelijkheid vermindert. Als tip werd er meegegeven om tweaks toe te voegen en typografische aanpassingen door te voeren om de duidelijkheid en leesbaarheid te verbeteren. Op basis van deze feedback heb ik gekozen om bepaalde zaken anders te ordenen. Bijvoorbeeld niet de tussenstops mee te vermelden rechtstreeks onder de bestemming maar om met een dropdown menu te werken. Ook heb ik verder nagedacht over het complete plaatje omdat medestudenten aangaven dat het geheel wat eenvoudig lijkt en het een idee is om andere kleuropties te proberen voor een ander effect.</p>
+
+      <h3 class="text-xl mt-6 mb-2">Opdracht</h3>
+      <p>De opdracht van deze week bestond uit het toevoegen van de eerste interacties aan onze mobiele schermontwerpen.</p>
+
+      <h3 class="text-xl mt-6 mb-2">Werkwijze</h3>
+      <p>Deze week ben ik te werk gegaan door deskresearch te doen en andere apps te analyseren om te begrijpen hoe gelijkaardige functies en interacties worden uitgewerkt. Daarnaast heb ik extra informatie opgezocht buiten het lesmateriaal, onder andere via YouTube, om mijn kennis verder te verdiepen. De feedback van medestudenten heb ik bewust meegenomen in het proces, vooral omdat ik zelf ook nog niet volledig tevreden was over het kleurgebruik. Door te experimenteren en te spelen met verschillende kleurencombinaties heb ik het effect op de uitstraling en gebruiksvriendelijkheid onderzocht. Deze aanpak hielp om het ontwerp stap voor stap te verbeteren.</p>
+
+      <h3 class="text-xl mt-6 mb-2">Geleerde inzichten</h3>
+      <p>Dankzij deze opdracht heb ik ingezien hoe waardevol deskresearch is. Door andere apps te analyseren en extra informatie op te zoeken buiten het lesmateriaal, kreeg ik beter inzicht in gangbare patronen en best practices binnen interface- en interaction design. Ook de feedback van medestudenten bleek een belangrijk leermoment. Het bevestigde dat kleurgebruik en visuele hiërarchie een grote invloed hebben op de uitstraling en leesbaarheid van een ontwerp. Door te experimenteren met verschillende kleurencombinaties heb ik geleerd hoe kleine aanpassingen een groot effect kunnen hebben op het totaalgevoel van de applicatie.</p>
+
+      <h3 class="text-xl mt-6 mb-2">Vooruitblik naar volgende week</h3>
+      <p>Volgende week zal ik verder werken aan het bestaande ontwerp en analyseren waar extra interacties kunnen worden toegevoegd om de gebruiksvriendelijkheid van de app verder te optimaliseren. De focus ligt op het verfijnen van bestaande schermen en het verbeteren van de gebruikersflow, zodat de app consistenter aanvoelt. Ook ga ik mijn eerste versie van de applicatie laten testen door anderen zodat ik volgende week kan werken aan eventuele verbeteringen voor usability flow.</p>
     </section>
 
     <!-- AFBEELDINGEN RECHTS -->
-    <section class="screens">
-      <img src="img/druk.jpg" class="screen-image" alt="Screen 1">
-      <img src="img/dropdown.jpg" class="screen-image" alt="Screen 2">
-      <img src="img/drukvol.jpg" class="screen-image" alt="Screen 3">
-      <img src="img/dropdownvol.jpg" class="screen-image" alt="Screen 4">
+    <section class="screens grid grid-cols-2 gap-5">
+      <img src="img/druk.jpg" class="screen-image w-full rounded-xl shadow-lg cursor-pointer object-cover" alt="Screen 1">
+      <img src="img/dropdown.jpg" class="screen-image w-full rounded-xl shadow-lg cursor-pointer object-cover" alt="Screen 2">
+      <img src="img/drukvol.jpg" class="screen-image w-full rounded-xl shadow-lg cursor-pointer object-cover" alt="Screen 3">
+      <img src="img/dropdownvol.jpg" class="screen-image w-full rounded-xl shadow-lg cursor-pointer object-cover" alt="Screen 4">
     </section>
   </div>
 </main>
 
 <!-- LIGHTBOX -->
-<div id="lightbox">
-  <img id="lightbox-img" src="">
+<div id="lightbox" class="hidden fixed top-0 left-0 w-full h-full bg-black/80 flex justify-center items-center z-50">
+  <img id="lightbox-img" class="max-w-[90%] max-h-[90%] rounded-xl shadow-lg" src="">
 </div>
 
-<footer>
+<footer class="bg-[var(--panel)] p-5 text-center text-sm">
   <p>Laatst gepubliceerde versie van mijn code op Github: 
     <a href="https://github.com/jouw-gebruikersnaam/repo" target="_blank">Github-link</a>
   </p>
@@ -227,13 +86,13 @@ footer a:hover { color: #cceeed; }
 
   images.forEach(img => {
     img.addEventListener('click', () => {
-      lightbox.style.display = 'flex';
+      lightbox.classList.remove('hidden');
       lightboxImg.src = img.src;
     });
   });
 
   lightbox.addEventListener('click', () => {
-    lightbox.style.display = 'none';
+    lightbox.classList.add('hidden');
   });
 </script>
 
