--- a/week4.html
+++ b/week4.html
@@ -5,177 +5,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Week 4 – HTML ervaring</title>
 
-<style>
-/* ================= BASIS ================= */
-:root{
-  --bg:#1f7a78;
-  --panel:#0d4f4e;
-  --panel-dark:#0b4241;
-  --text:#ffffff;
-}
+<!-- Tailwind CSS via CDN -->
+<script src="https://cdn.tailwindcss.com"></script>
 
-* {
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-body {
-  margin: 0;
-  background-color: var(--bg);
-  color: var(--text);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-/* ================= HEADER ================= */
-header {
-  /* verwijder fixed position */
-  /* position: fixed; */
-  /* top: 0; */
-  width: 100%;
-  /* z-index niet meer nodig */
-  background: var(--bg);
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.header-left {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-
-.terug-button {
-  display: inline-block;
-  background-color: var(--panel);
-  color: #fff !important;
-  padding: 14px 36px;
-  border-radius: 28px;
-  font-weight: 800;
-  font-size: 20px;
-  letter-spacing: 1px;
-  text-decoration: none;
-  box-shadow: 0 6px 0 rgba(0,0,0,0.12);
-}
-
-.terug-button:hover {
-  background-color: var(--panel-dark);
-  transform: translateY(-2px);
-}
-
-.week-nav {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 12px;
-}
-
-.week-nav a {
-  color: #fff;
-  text-decoration: underline;
-  font-weight: 600;
-  font-size: 14px;
-}
-
-.naam{
-  font-weight:700;
-  font-size:16px;
-  color: #fff !important;
-}
-
-
-/* ================= MAIN ================= */
-main {
-  flex: 1;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  display: flex;
-  justify-content: center;
-}
-
-.content-wrapper {
-  max-width: 1100px;
-  background-color: var(--panel);
-  padding: 80px 60px;
-  border-radius: 25px;
-  text-align: center;
-}
-
-h1 {
-  font-size: 56px;
-  font-weight: 900;
-  margin-bottom: 10px;
-}
-
-hr {
-  border: none;
-  border-top: 2px solid rgba(255,255,255,0.5);
-  width: 300px;
-  margin: 20px auto 35px;
-}
-
-h2 {
-  font-size: 32px;
-  font-weight: 800;
-  margin-bottom: 40px;
-}
-
-h3 {
-  font-size: 20px;
-  margin-top: 28px;
-}
-
-p {
-  font-size: 18px;
-  line-height: 1.7;
-  margin: 0 auto 25px;
-  max-width: 900px;
-}
-
-/* ================= FOOTER ================= */
-footer {
-  background-color: var(--panel);
-  padding: 20px;
-  text-align: center;
-  font-size: 16px;
-}
-
-footer a {
-  color: var(--text);
-  text-decoration: underline;
-}
-
-/* ================= RESPONSIVE ================= */
-@media (max-width: 768px) {
-  header {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  main {
-    padding-top: 180px;
-  }
-
-  .content-wrapper {
-    padding: 40px 20px;
-  }
-
-  h1 { font-size: 40px; }
-  h2 { font-size: 26px; }
-  h3 { font-size: 18px; }
-  p { font-size: 16px; }
-}
-</style>
+<!-- Eigen CSS -->
+<link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="bg-[#1f7a78] text-white font-sans flex flex-col min-h-screen">
 
-<header>
-  <div class="header-left">
+<!-- HEADER -->
+<header class="flex flex-wrap justify-between items-center p-5 gap-4">
+  <div class="flex items-center gap-5">
     <a class="terug-button" href="index.html">HOME</a>
-    <nav class="week-nav">
+    <nav class="week-nav flex flex-wrap gap-3">
       <a href="week1.html">Week 1</a>
       <a href="week2.html">Week 2</a>
       <a href="week3.html">Week 3</a>
@@ -191,20 +34,39 @@ footer a {
       <a href="resultaat.html">Resultaat</a>
     </nav>
   </div>
-  <div class="naam">Lotte Charle – 1GDM1</div>
+  <div class="naam font-bold text-lg">Lotte Charle – 1GDM1</div>
 </header>
 
+<!-- MAIN -->
+<main class="flex-1 flex justify-center py-16 px-5 md:px-10">
+  <div class="content-wrapper bg-[#0d4f4e] p-20 rounded-[25px] max-w-4xl text-center flex flex-col">
+    
+    <h1 class="text-5xl font-black mb-3">Week 4</h1>
+    <hr class="border-t-2 border-white/50 w-72 mx-auto my-5">
+    <h2 class="text-3xl font-extrabold mb-10">Eerste ervaring met HTML en verfijning van schermontwerpen</h2>
+    
+    <h3 class="mt-7 mb-2 text-xl font-semibold">Feedback</h3>
+    <p class="text-lg leading-relaxed mb-6">Op basis van de feedback van docenten en medestudenten heb ik inzicht gekregen in belangrijke verbeterpunten van mijn ontwerp. De docenten gaven aan dat ik de briefing opnieuw moet bekijken, omdat sommige onderdelen die daarin beschreven stonden nog ontbreken op de schermen. Medestudenten wezen erop dat het scherm momenteel vrij druk oogt en dat niet duidelijk genoeg is welke informatie het belangrijkst is. Daarnaast werd aangegeven dat de typografie op sommige plekken niet goed leesbaar is, wat de usability beïnvloedt, vooral bij het herkennen van extra voorzieningen in de trein. Naar aanleiding van deze feedback heb ik besloten om keuzes te maken in welke informatie ik laat opvallen en het aantal kleuren te beperken, zodat het ontwerp overzichtelijker en gebruiksvriendelijker wordt.</p>
 
-<main>
- <div class="content-wrapper"> <h1>Week 4</h1> <hr> <h2>Eerste ervaring met HTML en verfijning van schermontwerpen</h2> <h3>Feedback</h3> <p> Op basis van de feedback van docenten en medestudenten heb ik inzicht gekregen in belangrijke verbeterpunten van mijn ontwerp. De docenten gaven aan dat ik de briefing opnieuw moet bekijken, omdat sommige onderdelen die daarin beschreven stonden nog ontbreken op de schermen. Medestudenten wezen erop dat het scherm momenteel vrij druk oogt en dat niet duidelijk genoeg is welke informatie het belangrijkst is. Daarnaast werd aangegeven dat de typografie op sommige plekken niet goed leesbaar is, wat de usability beïnvloedt, vooral bij het herkennen van extra voorzieningen in de trein. Naar aanleiding van deze feedback heb ik besloten om keuzes te maken in welke informatie ik laat opvallen en het aantal kleuren te beperken, zodat het ontwerp overzichtelijker en gebruiksvriendelijker wordt. </p> <h3>Opdracht</h3> <p>Als eerst heb ik de feedback op mijn schermontwerpen toegepast. Daarna ben ik gestart met de opdracht van deze week, die bestond uit een eerste kennismaking met HTML en CSS. Het doel hiervan was om kennis op te doen en het programma te leren kennen, zodat ik dit later kan gebruiken om mijn ontwerpdocumentatie op een gestructureerde en overzichtelijke manier digitaal uit te werken. <p> <h3>Werkwijze</h3> <p>Als werkwijze heb ik gebruikgemaakt van YouTube-video’s en het lesmateriaal dat binnen het vak beschikbaar werd gesteld, zodat ik stap voor stap kon leren hoe webpagina’s worden opgebouwd en gestyled.</p> <h3>Geleerde inzichten</h3><p>Door hiermee te werken heb ik inzicht gekregen in hoe HTML wordt gebruikt voor de structuur van een pagina en hoe CSS zorgt voor de opmaak en lay-out. Daarnaast heb ik geleerd hoe ontwerpkeuzes uit Figma kunnen worden vertaald naar een werkende webpagina en hoe kleine aanpassingen in CSS een grote invloed hebben op het eindresultaat.</p> <h3>Vooruitblik naar volgende week</h3> <p>Deze kennis neem ik mee naar volgende week door bewuster na te denken over de vertaling van mijn ontwerpen naar code en door verder te oefenen met HTML en CSS om mijn pagina’s overzichtelijker, consistenter en gebruiksvriendelijker te maken.</p> 
-</div>
+    <h3 class="mt-7 mb-2 text-xl font-semibold">Opdracht</h3>
+    <p class="text-lg leading-relaxed mb-6">Als eerst heb ik de feedback op mijn schermontwerpen toegepast. Daarna ben ik gestart met de opdracht van deze week, die bestond uit een eerste kennismaking met HTML en CSS. Het doel hiervan was om kennis op te doen en het programma te leren kennen, zodat ik dit later kan gebruiken om mijn ontwerpdocumentatie op een gestructureerde en overzichtelijke manier digitaal uit te werken.</p>
+
+    <h3 class="mt-7 mb-2 text-xl font-semibold">Werkwijze</h3>
+    <p class="text-lg leading-relaxed mb-6">Als werkwijze heb ik gebruikgemaakt van YouTube-video’s en het lesmateriaal dat binnen het vak beschikbaar werd gesteld, zodat ik stap voor stap kon leren hoe webpagina’s worden opgebouwd en gestyled.</p>
+
+    <h3 class="mt-7 mb-2 text-xl font-semibold">Geleerde inzichten</h3>
+    <p class="text-lg leading-relaxed mb-6">Door hiermee te werken heb ik inzicht gekregen in hoe HTML wordt gebruikt voor de structuur van een pagina en hoe CSS zorgt voor de opmaak en lay-out. Daarnaast heb ik geleerd hoe ontwerpkeuzes uit Figma kunnen worden vertaald naar een werkende webpagina en hoe kleine aanpassingen in CSS een grote invloed hebben op het eindresultaat.</p>
+
+    <h3 class="mt-7 mb-2 text-xl font-semibold">Vooruitblik naar volgende week</h3>
+    <p class="text-lg leading-relaxed mb-6">Deze kennis neem ik mee naar volgende week door bewuster na te denken over de vertaling van mijn ontwerpen naar code en door verder te oefenen met HTML en CSS om mijn pagina’s overzichtelijker, consistenter en gebruiksvriendelijker te maken.</p>
+
+  </div>
 </main>
 
-<footer>
-  <p>
-    Laatst gepubliceerde versie van mijn code op Github: 
-    <a href="https://github.com/jouw-gebruikersnaam/repo" target="_blank">Github-link</a>
-  </p>
+<!-- FOOTER -->
+<footer class="bg-[#0d4f4e] p-5 text-center text-sm">
+  Laatst gepubliceerde versie van mijn code op Github: 
+  <a href="https://github.com/jouw-gebruikersnaam/repo" target="_blank" class="underline">Github-link</a>
 </footer>
 
 </body>
