--- a/week6.html
+++ b/week6.html
@@ -5,225 +5,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Week 6</title>
 
-<style>
-:root {
-  --bg: #1f7a78;
-  --panel: #0d4f4e;
-  --panel-dark: #0b4241;
-  --text: #ffffff;
-}
+<!-- Tailwind CSS via CDN -->
+<script src="https://cdn.tailwindcss.com"></script>
 
-/* ================= BASIS ================= */
-* {
-  box-sizing: border-box;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-}
-
-body {
-  margin: 0;
-  background: var(--bg);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-/* ================= HEADER ================= */
-header {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding: 20px;
-  background: var(--bg);
-}
-
-.header-left {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
-
-.terug-button {
-  display: inline-block;
-  background-color: var(--panel);
-  color: #fff !important;
-  padding: 14px 36px;
-  border-radius: 28px;
-  font-weight: 800;
-  font-size: 20px;
-  letter-spacing: 1px;
-  text-decoration: none;
-  box-shadow: 0 6px 0 rgba(0,0,0,0.12);
-}
-
-.terug-button:hover {
-  background-color: var(--panel-dark);
-  transform: translateY(-2px);
-}
-
-.week-nav {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 12px;
-}
-
-.week-nav a {
-  color: #fff;
-  text-decoration: underline;
-  font-weight: 600;
-  font-size: 14px;
-}
-
-.naam {
-  font-weight: 700;
-  font-size: 16px;
-  color: #fff !important;
-}
-
-.divider {
-  width: 50%;
-  height: 2px;
-  background-color: rgba(255,255,255,0.8);
-  margin-bottom: 20px;
-}
-
-/* ================= MAIN ================= */
-main {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  padding: 40px 20px;
-}
-
-.page {
-  display: flex;
-  gap: 40px;
-  width: 100%;
-  max-width: 1200px;
-  flex-wrap: wrap;
-  align-items: flex-start;
-}
-
-/* ================= LEFT PANEL ================= */
-.card-text {
-  flex: 2 1 600px;
-  background-color: var(--panel);
-  border-radius: 24px;
-  padding: 40px;
-  color: #fff;
-}
-
-.card-text h1 {
-  font-size: 40px;
-  margin-bottom: 16px;
-}
-
-.card-text h2 {
-  font-size: 28px;
-  margin-top: 24px;
-  margin-bottom: 12px;
-}
-
-.card-text h3 {
-  font-size: 20px;
-  margin-top: 20px;
-  margin-bottom: 8px;
-}
-
-.card-text p {
-  font-size: 16px;
-  line-height: 1.6;
-  margin-bottom: 16px;
-  opacity: 0.9;
-}
-
-/* ================= RIGHT PANEL ================= */
-.images {
-  flex: 1 1 400px;
-  display: flex;
-  gap: 20px;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-top: 270px;
-}
-
-.images img {
-  width: 100%;
-  max-width: 100%;
-  border-radius: 16px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.25);
-  object-fit: cover;
-  cursor: pointer; /* klikbaar maken */
-}
-
-/* ================= LIGHTBOX OVERLAY ================= */
-#overlay {
-  display: none;
-  position: fixed;
-  top:0; left:0;
-  width:100%; height:100%;
-  background: rgba(0,0,0,0.85);
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-}
-
-#overlay img {
-  max-width: 90%;
-  max-height: 90%;
-  border-radius: 12px;
-}
-
-/* ================= FOOTER ================= */
-footer {
-  width: 100%;
-  padding: 20px;
-  background-color: var(--panel);
-  color: #fff;
-  text-align: center;
-  font-size: 16px;
-}
-
-footer a {
-  color: white;
-  text-decoration: underline;
-}
-
-/* ================= RESPONSIVE ================= */
-@media (max-width: 900px) {
-  .page {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .images {
-    justify-content: center;
-  }
-
-  .images img {
-    max-width: 90%;
-  }
-
-  .card-text {
-    width: 90%;
-  }
-}
-
-@media (max-width: 500px) {
-  .card-text h1 { font-size: 32px; }
-  .card-text h2 { font-size: 24px; }
-  .card-text h3 { font-size: 18px; }
-  .card-text p { font-size: 14px; }
-}
-</style>
+<!-- Eigen style.css -->
+<link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="bg-[#1f7a78] text-white font-sans flex flex-col min-h-screen">
 
-<header>
-  <div class="header-left">
+<!-- HEADER -->
+<header class="flex flex-wrap justify-between items-center p-5 bg-[#1f7a78] gap-4">
+  <div class="flex items-center gap-5">
     <a class="terug-button" href="index.html">HOME</a>
-    <nav class="week-nav">
+    <nav class="week-nav flex flex-wrap gap-3">
       <a href="week1.html">Week 1</a>
       <a href="week2.html">Week 2</a>
       <a href="week3.html">Week 3</a>
@@ -239,45 +33,63 @@ footer a {
       <a href="resultaat.html">Resultaat</a>
     </nav>
   </div>
-  <div class="naam">Lotte Charle – 1GDM1</div>
+  <div class="naam font-bold text-lg">Lotte Charle – 1GDM1</div>
 </header>
 
-<main>
-  <div class="page">
+<!-- MAIN -->
+<main class="flex-1 flex justify-center py-10 px-5 md:px-10">
+  <div class="page flex flex-wrap gap-10 max-w-[1200px] w-full items-start">
 
-    <div class="card-text">
-      <h1>Week 6</h1>
-      <div class="divider"></div>
-      <h2>Verder werken met HTML en CSS</h2>
-      <h3>Feedback</h3>
-      <p>Tijdens deze week kreeg ik de feedback dat de huidige pagina’s nog te eenvoudig zijn en onvoldoende aansluiten bij de ontworpen schermen. Er werd aangegeven dat het belangrijk is om na te denken over een meer gevarieerde layout, zodat de pagina’s overzichtelijker worden en visueel aantrekkelijker zijn om naar te kijken. Daarnaast werd geadviseerd om de terugknop aan te passen om de usability te verbeteren. Op basis van deze feedback heb ik besloten om te werken met herbruikbare kleuren en één consistente typografie, zodat de gebruiksvriendelijkheid en herkenbaarheid van het ontwerp worden versterkt.</p>
-      <h3>Opdracht</h3>
-      <p>Deze week was de opdracht om verder te werken met HTML en CSS en te oefenen met het gebruik van verschillende HTML-elementen, zoals koppen, paragrafen en afbeeldingen, en met CSS voor kleuren, lettertypes en lay-out.</p>
-      <h3>Werkwijze</h3>
-      <p>Eerst heb ik de ontvangen feedback toegepast en daarna gespeeld met kleuren en typografie om meer variatie te brengen in de verschillende pagina’s. Zo kon ik oefenen met het aanpassen van de stijl en het verbeteren van de uitstraling van de webpagina’s.</p>
-      <h3>Geleerde inzichten</h3>
-      <p>Tijdens deze opdracht heb ik geleerd hoe belangrijk structuur en styling zijn voor een webpagina. Ik heb inzicht gekregen in het gebruik van verschillende HTML-elementen en hoe CSS de uitstraling en leesbaarheid beïnvloedt. Daarnaast heb ik ervaren hoe kleine aanpassingen in kleur, typografie en lay-out een groot verschil kunnen maken voor de variatie en aantrekkelijkheid van meerdere pagina’s.</p>
-      <h3>Vooruitblik naar volgende week</h3>
-      <p>Tegen volgende week wil ik de basis van mijn website af hebben dus de structuur, lay-out en gekozen typografie om nadien makkelijk extra aanpassingen en kleine verbeteringen te doen om het er nog beter uit te laten zien.</p>
-    </div>
+    <!-- LEFT PANEL -->
+    <section class="card-text bg-[#0d4f4e] p-10 rounded-3xl flex-1 min-w-[300px]">
+      <h1 class="text-4xl font-bold mb-4">Week 6</h1>
+      <div class="divider w-1/2 h-[2px] bg-white/80 mb-5"></div>
+      <h2 class="text-2xl font-semibold mt-6 mb-3">Verder werken met HTML en CSS</h2>
 
-    <div class="images">
-      <img src="img/begin.jpg" alt="Landschap foto 1" class="clickable-image">
-      <img src="img/ookbegin.jpg" alt="Landschap foto 2" class="clickable-image">
-    </div>
+      <h3 class="text-xl font-semibold mt-5 mb-2">Feedback</h3>
+      <p class="text-base leading-relaxed mb-4">
+        Tijdens deze week kreeg ik de feedback dat de huidige pagina’s nog te eenvoudig zijn en onvoldoende aansluiten bij de ontworpen schermen. Er werd aangegeven dat het belangrijk is om na te denken over een meer gevarieerde layout, zodat de pagina’s overzichtelijker worden en visueel aantrekkelijker zijn om naar te kijken. Daarnaast werd geadviseerd om de terugknop aan te passen om de usability te verbeteren. Op basis van deze feedback heb ik besloten om te werken met herbruikbare kleuren en één consistente typografie, zodat de gebruiksvriendelijkheid en herkenbaarheid van het ontwerp worden versterkt.
+      </p>
+
+      <h3 class="text-xl font-semibold mt-5 mb-2">Opdracht</h3>
+      <p class="text-base leading-relaxed mb-4">
+        Deze week was de opdracht om verder te werken met HTML en CSS en te oefenen met het gebruik van verschillende HTML-elementen, zoals koppen, paragrafen en afbeeldingen, en met CSS voor kleuren, lettertypes en lay-out.
+      </p>
+
+      <h3 class="text-xl font-semibold mt-5 mb-2">Werkwijze</h3>
+      <p class="text-base leading-relaxed mb-4">
+        Eerst heb ik de ontvangen feedback toegepast en daarna gespeeld met kleuren en typografie om meer variatie te brengen in de verschillende pagina’s. Zo kon ik oefenen met het aanpassen van de stijl en het verbeteren van de uitstraling van de webpagina’s.
+      </p>
+
+      <h3 class="text-xl font-semibold mt-5 mb-2">Geleerde inzichten</h3>
+      <p class="text-base leading-relaxed mb-4">
+        Tijdens deze opdracht heb ik geleerd hoe belangrijk structuur en styling zijn voor een webpagina. Ik heb inzicht gekregen in het gebruik van verschillende HTML-elementen en hoe CSS de uitstraling en leesbaarheid beïnvloedt. Daarnaast heb ik ervaren hoe kleine aanpassingen in kleur, typografie en lay-out een groot verschil kunnen maken voor de variatie en aantrekkelijkheid van meerdere pagina’s.
+      </p>
+
+      <h3 class="text-xl font-semibold mt-5 mb-2">Vooruitblik naar volgende week</h3>
+      <p class="text-base leading-relaxed mb-4">
+        Tegen volgende week wil ik de basis van mijn website af hebben dus de structuur, lay-out en gekozen typografie om nadien makkelijk extra aanpassingen en kleine verbeteringen te doen om het er nog beter uit te laten zien.
+      </p>
+    </section>
+
+    <!-- RIGHT PANEL -->
+    <section class="images flex flex-wrap gap-5 flex-1 min-w-[200px] justify-center mt-72">
+      <img src="img/begin.jpg" alt="Landschap foto 1" class="clickable-image w-full rounded-xl object-cover shadow-lg">
+      <img src="img/ookbegin.jpg" alt="Landschap foto 2" class="clickable-image w-full rounded-xl object-cover shadow-lg">
+    </section>
 
   </div>
 </main>
 
 <!-- LIGHTBOX OVERLAY -->
-<div id="overlay" onclick="this.style.display='none'">
-  <img id="overlay-img" src="">
+<div id="overlay" class="hidden fixed top-0 left-0 w-full h-full bg-black/80 flex justify-center items-center z-50" onclick="this.style.display='none'">
+  <img id="overlay-img" class="max-w-[90%] max-h-[90%] rounded-lg" src="">
 </div>
 
-<footer>
-  <p>Laatst gepubliceerde versie van mijn code op Github: 
-    <a href="https://github.com/jouw-gebruikersnaam/repo" target="_blank">Github-link</a>
-  </p>
+<!-- FOOTER -->
+<footer class="bg-[#0d4f4e] p-5 text-center text-sm">
+  Laatst gepubliceerde versie van mijn code op Github: 
+  <a href="https://github.com/jouw-gebruikersnaam/repo" target="_blank" class="underline">Github-link</a>
 </footer>
 
 <script>
@@ -295,7 +107,6 @@ images.forEach(img => {
 
 </body>
 </html>
-
 
 
 
